examType api finished
